Bug 205953 - print fmt logic needs to handle offsets of functions
Summary: print fmt logic needs to handle offsets of functions
Status: RESOLVED CODE_FIX
Alias: None
Product: Tools
Classification: Unclassified
Component: Trace-cmd/Kernelshark (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Steven Rostedt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-23 20:17 UTC by Steven Rostedt
Modified: 2020-07-09 19:41 UTC (History)
0 users

See Also:
Kernel Version: N/A
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Patch to process the function names in print fmt file (1.55 KB, patch)
2019-12-23 20:17 UTC, Steven Rostedt
Details | Diff

Description Steven Rostedt 2019-12-23 20:17:00 UTC
Created attachment 286407 [details]
Patch to process the function names in print fmt file

The preempt and irq enable/disable trace events save a 32 bit offset from "_stext". But since trace-cmd does not process the "_stext" location (just returns zero), it does not show the addresses correctly.

See https://lore.kernel.org/r/20191127154428.191095-1-antonio.borneo@st.com
Comment 1 Steven Rostedt 2020-07-09 19:41:20 UTC
Fixed by commit e3207271be7d ("tools lib traceevent: Let function symbols be used in operations").

Note You need to log in before you can comment on or make changes to this bug.